// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDialog TransactionDialog with tansactions snapshot 1`] = `
<Dialog
  aria-labelledby="form-dialog-title"
  maxWidth="md"
  onClose={[MockFunction]}
  open={false}
>
  <DialogTitle
    id="form-dialog-title"
  >
    transicationDialogTitle
  </DialogTitle>
  <DialogContent>
    <Paper
      className="paper"
    >
      <Table
        className="talbe"
      >
        <TableHead>
          <TableRow>
            <TableCell
              padding="dense"
            >
              thAccountId
            </TableCell>
            <TableCell
              padding="dense"
            >
              thType
            </TableCell>
            <TableCell
              padding="dense"
            >
              thAmount
            </TableCell>
            <TableCell
              align="justify"
              padding="dense"
            >
              thDate
            </TableCell>
          </TableRow>
        </TableHead>
        <TableBody>
          <TableRow>
            <TableCell
              padding="dense"
            >
              accountId
            </TableCell>
            <TableCell
              padding="dense"
            >
              Deposit
            </TableCell>
            <TableCell
              padding="dense"
            >
              $
              123
            </TableCell>
            <TableCell
              padding="dense"
            >
              2018/01/01
            </TableCell>
          </TableRow>
          <TableRow>
            <TableCell
              padding="dense"
            >
              accountId
            </TableCell>
            <TableCell
              padding="dense"
            >
              Interest
            </TableCell>
            <TableCell
              padding="dense"
            >
              $
              1232
            </TableCell>
            <TableCell
              padding="dense"
            >
              2018/04/01
            </TableCell>
          </TableRow>
        </TableBody>
      </Table>
    </Paper>
  </DialogContent>
  <DialogActions>
    <Button
      color="primary"
      onClick={[MockFunction]}
    >
      close
    </Button>
  </DialogActions>
</Dialog>
`;

exports[`TransactionDialog TransactionDialog without tansactions snapshot 1`] = `
<Dialog
  aria-labelledby="form-dialog-title"
  maxWidth="md"
  onClose={[MockFunction]}
  open={false}
>
  <DialogTitle
    id="form-dialog-title"
  >
    transicationDialogTitle
  </DialogTitle>
  <DialogContent>
    <Paper
      className="paper"
    >
      <Table
        className="talbe"
      >
        <TableHead>
          <TableRow>
            <TableCell
              padding="dense"
            >
              thAccountId
            </TableCell>
            <TableCell
              padding="dense"
            >
              thType
            </TableCell>
            <TableCell
              padding="dense"
            >
              thAmount
            </TableCell>
            <TableCell
              align="justify"
              padding="dense"
            >
              thDate
            </TableCell>
          </TableRow>
        </TableHead>
        <TableBody>
          <TableRow>
            <LoadingAnimation />
          </TableRow>
        </TableBody>
      </Table>
    </Paper>
  </DialogContent>
  <DialogActions>
    <Button
      color="primary"
      onClick={[MockFunction]}
    >
      close
    </Button>
  </DialogActions>
</Dialog>
`;
